# photo-quiz

./: README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  vault.rs
